--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2700,7 +2700,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #4acaa8;
+		background: rgb(89,189,108);
 		color: #d2f2e9;
 		height: 100%;
 		overflow-y: auto;
